@@ -1,6 +1,9 @@
 Changes between 2.0.0 and 2.0.1.devX
 ----------------------------------------------
 
+- refine and unify initial capturing so that it works nicely 
+  even if the logging module is used on an early-loaded conftest.py
+  file or plugin.
 - fix issue12 - show plugin versions with "--version" and
   "--traceconfig" and also document how to add extra information 
   to reporting test header
